--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,168 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+body{
+	font-family: 'Titillium Web'
+}
+h1, h2{
+	font-family:'Bangers'
+}
+
+.container{
+	width:800px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.navigation{
+	margin-top:20px;
+	display:flex;
+}
+a{
+	text-decoration: none;
+	color: grey;  
+	width:12%; 
+	vertical-align:top;	
+	margin-top:10px;
+	justify-content: space-between;
+	text-align: center;
+	}
+.hero{
+	display:flex;
+	margin-top:50px;
+	margin-bottom:50px;
+}
 
 
+.logo{
+	margin-left:25px;
+
+	}
+.IOD{
+	justify-content:center;
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	width:50%;
+	
+}
+.getstarted{
+	border:1px solid black;
+	background:white;
+	text-align: center;
+	padding-top:5px; 
+	padding-bottom:5px;
+	padding-left:50px;
+	padding-right: 50px;
+	justify-content: center;
+	
+
+}
+.circle{
+	width:50%;
+}
+
+.topcontent{
+	border-top:1px solid black;
+	display:flex;
+	padding-top:25px;
+	flex-wrap:wrap;
+
+}
+.topcontent .content{
+	width:46%;
+	margin-left:2%;
+	margin-right:2%;	
+}
+
+
+.middle-img{
+	
+	width:100%;
+	margin-top:25px;
+	margin-bottom: 25px;
+
+}
+.bottomcontent{
+	border-bottom:1px solid black;
+	padding-bottom:20px;
+	display:flex;
+	justify-content: space-between;
+	flex-wrap:wrap;
+}
+.bottomcontent .content{
+		width:30%;
+}
+
+
+.contact{
+	margin-top:25px;
+	display:flex;
+
+}
+
+footer{
+	text-align: center;
+	display:flex;
+	margin:25px;
+	justify-content: center;
+}
+
+
+@media screen and (max-width: 800px) {
+	.container{
+		width:100%;
+		margin-left:auto;
+		margin-right:auto;
+	}
+	.circle {
+	 display:none;
+ }
+.IOD{
+	width:100%;
+}
+.logo{
+	order: 1;
+	width:20%;
+	margin-left:40%;
+	margin-right:40%;
+	margin-bottom:20px;
+}
+.navigation a{
+	order:2;
+}
+.navigation{
+	flex-wrap:wrap;
+	justify-content: space-between;
+}
+}
+@media screen and (max-width: 500px) {
+	.logo{
+		width:40%;
+		margin-left:0%;
+		margin-right:0%;
+		border-bottom:1px solid grey;
+		padding-right:30%;
+		padding-left:30%;
+		padding-bottom:20px;
+		margin-bottom:0px;
+	}
+	
+	.navigation a{
+		width:100%;
+		border-bottom:1px solid grey;
+		padding-bottom:20px;
+		font-size:20px;
+	}
+
+	.topcontent .content{
+		width:100%;
+	}
+
+
+	.bottomcontent .content{
+		width:100%;
+	}
+
+
+
+
+}
