--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ h1, h2{
 .navigation{
 	margin-top:20px;
 	display:flex;
+	justify-content: space-evenly;
 }
 a{
 	text-decoration: none;
@@ -33,7 +34,7 @@ a{
 
 
 .logo{
-	margin-left:25px;
+	width:12%;
 
 	}
 .IOD{
@@ -119,29 +120,24 @@ footer{
 .IOD{
 	width:100%;
 }
-.logo{
-	order: 1;
-	width:20%;
-	margin-left:40%;
-	margin-right:40%;
-	margin-bottom:20px;
-}
 .navigation a{
 	order:2;
 }
+	.navigation .logo{
+		order: 1;
+		width:100%;
+		margin-bottom:20px;
+		}
 .navigation{
 	flex-wrap:wrap;
 	justify-content: space-between;
 }
 }
 @media screen and (max-width: 500px) {
-	.logo{
-		width:40%;
-		margin-left:0%;
-		margin-right:0%;
+	.navigation .logo{
+		width:100%;
+
 		border-bottom:1px solid grey;
-		padding-right:30%;
-		padding-left:30%;
 		padding-bottom:20px;
 		margin-bottom:0px;
 	}
