--- a/css/index.css
+++ b/css/index.css
@@ -186,7 +186,6 @@ body{
 
 .digital{
 	width:40%;
-	height:200px;
 	border:1px solid black;
 	margin:15px;
 	padding:15px;
@@ -258,4 +257,7 @@ h1{
 		display:flex;
 		flex-wrap: wrap;
 		flex-direction: column;
+		width:30%;
+		margin-left:40%;
+		margin-right:40%;
 		}
